--- a/news/src/main/resources/templates/pages/chat.html
+++ b/news/src/main/resources/templates/pages/chat.html
@@ -18,7 +18,7 @@
   </style>
 </head>
 <body>
-  <div th:replace="fragments/header :: siteHeader"></div>
+  <div th:replace="~{fragments/header :: siteHeader}"></div>
 
   <main class="main">
     <div class="container">
@@ -64,7 +64,7 @@
     </div>
   </main>
 
-  <div th:replace="fragments/footer :: siteFooter"></div>
+  <div th:replace="~{fragments/footer :: siteFooter}"></div>
 
   <script src="/js/chat.js"></script>
 </body>
