회원가입 페이지 header스타일 적용

--- a/news/src/main/resources/templates/member/signup.html
+++ b/news/src/main/resources/templates/member/signup.html
@@ -8,6 +8,7 @@
   <!-- 전역 CSS는 그대로 두어도 됩니다 (아래 su-* 네임스페이스로 충돌 완전 차단) -->
   <link rel="stylesheet" href="/css/style.css"/>
   <link rel="stylesheet" href="/css/footer.css"/>
+  <link rel="stylesheet" href="/css/header.css"/>
 
   <style>
     /* ====== 회원가입 전용 토큰 (전역과 분리) ====== */
